tests/machine/x/c/tree_sum.error
exit status 1
/workspace/mochi/tests/machine/x/c/tree_sum.c: In function ‘sum_tree’:
/workspace/mochi/tests/machine/x/c/tree_sum.c:27:3: error: unknown type name ‘tree_t’; did you mean ‘time_t’?
   27 |   tree_t tmp1 = t;
      |   ^~~~~~
      |   time_t
/workspace/mochi/tests/machine/x/c/tree_sum.c:27:17: error: incompatible types when initializing type ‘int’ using type ‘Tree’ {aka ‘struct Tree’}
   27 |   tree_t tmp1 = t;
      |                 ^
/workspace/mochi/tests/machine/x/c/tree_sum.c:29:15: error: request for member ‘tag’ in something not a structure or union
   29 |   switch (tmp1.tag) {
      |               ^
/workspace/mochi/tests/machine/x/c/tree_sum.c:34:5: error: unknown type name ‘tree_t’; did you mean ‘time_t’?
   34 |     tree_t left = *tmp1.value.Node.left;
      |     ^~~~~~
      |     time_t
/workspace/mochi/tests/machine/x/c/tree_sum.c:34:24: error: request for member ‘value’ in something not a structure or union
   34 |     tree_t left = *tmp1.value.Node.left;
      |                        ^
/workspace/mochi/tests/machine/x/c/tree_sum.c:35:21: error: request for member ‘value’ in something not a structure or union
   35 |     int value = tmp1.value.Node.value;
      |                     ^
/workspace/mochi/tests/machine/x/c/tree_sum.c:36:5: error: unknown type name ‘tree_t’; did you mean ‘time_t’?
   36 |     tree_t right = *tmp1.value.Node.right;
      |     ^~~~~~
      |     time_t
/workspace/mochi/tests/machine/x/c/tree_sum.c:36:25: error: request for member ‘value’ in something not a structure or union
   36 |     tree_t right = *tmp1.value.Node.right;
      |                         ^
/workspace/mochi/tests/machine/x/c/tree_sum.c:37:21: error: incompatible type for argument 1 of ‘sum_tree’
   37 |     tmp2 = sum_tree(left) + value + sum_tree(right);
      |                     ^~~~
      |                     |
      |                     int
/workspace/mochi/tests/machine/x/c/tree_sum.c:26:19: note: expected ‘Tree’ {aka ‘struct Tree’} but argument is of type ‘int’
   26 | int sum_tree(Tree t) {
      |              ~~~~~^
/workspace/mochi/tests/machine/x/c/tree_sum.c:37:46: error: incompatible type for argument 1 of ‘sum_tree’
   37 |     tmp2 = sum_tree(left) + value + sum_tree(right);
      |                                              ^~~~~
      |                                              |
      |                                              int
/workspace/mochi/tests/machine/x/c/tree_sum.c:26:19: note: expected ‘Tree’ {aka ‘struct Tree’} but argument is of type ‘int’
   26 | int sum_tree(Tree t) {
      |              ~~~~~^
/workspace/mochi/tests/machine/x/c/tree_sum.c: In function ‘_mochi_main’:
/workspace/mochi/tests/machine/x/c/tree_sum.c:47:3: error: unknown type name ‘tree_t’; did you mean ‘time_t’?
   47 |   tree_t t =
      |   ^~~~~~
      |   time_t
/workspace/mochi/tests/machine/x/c/tree_sum.c:48:7: error: incompatible types when initializing type ‘int’ using type ‘Tree’ {aka ‘struct Tree’}
   48 |       (Tree){.tag = Tree_Node,
      |       ^
/workspace/mochi/tests/machine/x/c/tree_sum.c:57:27: error: incompatible type for argument 1 of ‘sum_tree’
   57 |   printf("%d\n", sum_tree(t));
      |                           ^
      |                           |
      |                           int
/workspace/mochi/tests/machine/x/c/tree_sum.c:26:19: note: expected ‘Tree’ {aka ‘struct Tree’} but argument is of type ‘int’
   26 | int sum_tree(Tree t) {
      |              ~~~~~^
